= Changelog

== 1.4.0 (2011-12-16)

  - Added Easy/Normal/Hard difficulties ('Normal' is a bit easier than previous; 'hard' is a bit harder)
  - Top 20 global scores are recorded and can be viewed ingame and online: http://www.gamercv.com/gamers/9-spooner
  - Top 20 of your own scores, ignoring global scores, are stored locally (so you don't have to compete with people with reflexes).
  - Pixel glow shrinks as a pixel is wounded, as well as some other minor tweaks.
  - Made the game entirely independent of frames per second, so it can be played on older hardware.
  - Fixed: Mistyped filename meant previous version wouldn't work on Linux :(
  - Fixed: Physics messy when window is dragged while playing.
  
== 1.3.0 (2011-12-15)
  - All releases now include source code.
  - Added Windows INSTALLER.
  - Added some music from KanonBaum (Brian Peppers).
  - Fixed occasional graphical glitches.
  - OSX package now runs on OS X 10.5 or later.
  - Source (Linux) version now works with Ruby 1.9.3

== 1.2.4 (2011-11-24)
  - Hopefully fixed issue with openal in ocra package (I think - thanks jlnr and dahrkael)

== 1.2.3 (2011-11-24)
  - Fixed for ruby 1.9.2
  - Added message when building OSX if required file is missing.

== v1.2.2 (2011-11-23)
  - Updated Windows executable to use Ruby 1.9.3 (should start up faster)
  - Fixed: Game breaks when paused (pressed 'P') or in help (pressed 'F1') (Thanks Jwosty)

== v1.2.1 (2011-07-17)
  - Hotfix for bad release build.

== v1.2 (2011-07-16)

  - Vastly improved visuals.
  - FIXED: Some sound effects are EXTREMELY loud.
  - FIXED: Glitching when lots of pixels are touching.
  
== v1.1 (2010-08-24)

  Ludum Dare #18 entry compatibility update

  - Fixed CTD in Linux.
  - Fixed font rendering in Linux.
  - Made OS X executable.

== v1.0 (2010-08-22)

  Ludum Dare #18 entry